WIP async/await implementation

--- a/juniper/Cargo.toml
+++ b/juniper/Cargo.toml
@@ -24,6 +24,7 @@ harness = false
 path = "benches/bench.rs"
 
 [features]
+async = ["juniper_codegen/async", "futures-preview"]
 expose-test-schema = []
 default = [
     "chrono",
@@ -44,6 +45,9 @@ serde_json = { version="1.0.2", optional = true }
 url = { version = "1.5.1", optional = true }
 uuid = { version = "0.7", optional = true }
 
+futures-preview = { version = "0.3.0-alpha.18", optional = true, features = ["nightly", "async-await"] }
+
 [dev-dependencies]
 bencher = "0.1.2"
 serde_json = { version = "1.0.2" }
+tokio = "0.2.0-alpha.2"
