--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "juniper_codegen",
   "juniper",
   "integration_tests/juniper_tests",
+  "integration_tests/async_await",
   "juniper_hyper",
   "juniper_iron",
   "juniper_rocket",
