--- a/juniper_codegen/Cargo.toml
+++ b/juniper_codegen/Cargo.toml
@@ -14,6 +14,9 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+async = []
+
 [dependencies]
 proc-macro2 = "0.4"
 syn = { version = "0.15.28", features = ["full", "extra-traits", "parsing"] }
