--- a/juniper_warp/Cargo.toml
+++ b/juniper_warp/Cargo.toml
@@ -21,7 +21,7 @@ futures = "0.1.23"
 serde = "1.0.75"
 tokio-threadpool = "0.1.7"
 
-futures03 = { version = "0.3.0-alpha.18", optional = true, package = "futures-preview" }
+futures03 = { version = "0.3.0-alpha.18", optional = true, package = "futures-preview", features = ["compat"] }
 
 [dev-dependencies]
 juniper = { version = "0.13.1", path = "../juniper", features = ["expose-test-schema", "serde_json"] }
